--- a/mash-log.html
+++ b/mash-log.html
@@ -5,9 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>797 Distillery — Mash Log</title>
 
-  <!-- Shared header -->
   <link rel="stylesheet" href="header.css?v=1.0.0" />
-  <!-- Mash app css -->
   <link rel="stylesheet" href="mash.css?v=1.0.1" />
 </head>
 
@@ -71,7 +69,6 @@
           </div>
         </div>
 
-        <!-- YEAST / NUTRIENT -->
         <div style="margin-top:14px;">
           <label>Yeast / Nutrient Added</label>
           <select id="addYN">
@@ -99,7 +96,6 @@
           </div>
         </div>
 
-        <!-- PH ADJUST -->
         <div style="margin-top:14px;">
           <label>pH Adjustment</label>
           <select id="phAction">
@@ -153,9 +149,7 @@
     let currentLogId = null;
     let cachedEntries = [];
 
-    /* =========================
-       Dropdown behavior
-       ========================= */
+    // dropdown visibility
     el("addYN").onchange = () =>
       el("ynFields").style.display = el("addYN").value ? "grid" : "none";
 
@@ -165,19 +159,11 @@
     function resetEntryForm(){
       ["inPH","inSG","inTemp","inNotes","ynProduct","ynAmount","phProduct","phAmount"]
         .forEach(id => el(id).value = "");
-
       el("addYN").value = "";
       el("phAction").value = "";
-      el("ynUnit").value = "g";
-      el("phUnit").value = "g";
-
       el("ynFields").style.display = "none";
       el("phFields").style.display = "none";
     }
-
-    /* =========================
-       Rendering
-       ========================= */
 
     function renderMeta(log){
       el("logMeta").innerHTML = `
@@ -185,7 +171,6 @@
         <p>Fill: ${log.fill_gal} gal</p>
         <p>Mode: ${log.mode}</p>
         <p>Started: ${new Date(log.mash_started_at).toLocaleString()}</p>
-        ${log.sour_mash ? "<p><strong>Sour Mash</strong></p>" : ""}
       `;
     }
 
@@ -197,45 +182,16 @@
 
       el("entries").innerHTML = entries.map(e => `
         <div class="panel" style="margin-bottom:12px;">
-
-          <div class="muted" style="margin-bottom:6px;">
-            ${e._saving ? "Saving…" : e._error ? "⚠️ Not saved" : new Date(e.timestamp).toLocaleString()}
+          <div class="muted">${new Date(e.timestamp).toLocaleString()}</div>
+          <div>
+            pH ${e.ph || "—"} · SG ${e.sg || "—"} · Temp ${e.temp_f || "—"}°F
           </div>
-
-          <div style="font-weight:500;margin-bottom:6px;">
-            pH ${e.ph || "—"} ·
-            SG ${e.sg || "—"} ·
-            Temp ${e.temp_f || "—"}°F
-          </div>
-
-          ${e.yn_type ? `
-            <div style="margin-top:6px;">
-              <strong>➕ ${e.yn_type === "yeast" ? "Yeast added" : "Nutrient added"}</strong><br>
-              ${e.yn_product} — ${e.yn_amount}${e.yn_unit}
-            </div>
-          ` : ""}
-
-          ${e.ph_action ? `
-            <div style="margin-top:6px;">
-              <strong>🧪 pH adjusted (${e.ph_action})</strong><br>
-              ${e.ph_product} — ${e.ph_amount}${e.ph_unit}
-            </div>
-          ` : ""}
-
-          ${e.notes ? `
-            <div style="margin-top:6px;">
-              <strong>📝 Notes</strong><br>
-              ${e.notes}
-            </div>
-          ` : ""}
-
+          ${e.yn_type ? `<div>➕ ${e.yn_type}: ${e.yn_product} (${e.yn_amount}${e.yn_unit})</div>` : ""}
+          ${e.ph_action ? `<div>🧪 pH ${e.ph_action}: ${e.ph_product} (${e.ph_amount}${e.ph_unit})</div>` : ""}
+          ${e.notes ? `<div>${e.notes}</div>` : ""}
         </div>
       `).join("");
     }
-
-    /* =========================
-       Load logs + entries
-       ========================= */
 
     async function populateLogSelect(){
       const sel = el("logSelect");
@@ -251,71 +207,50 @@
     }
 
     async function loadLog(logId){
-  currentLogId = logId;
-  el("logSection").style.display = "block";
+      currentLogId = logId;
+      el("logSection").style.display = "block";
+      el("entries").innerHTML = "<p class='muted'>Loading…</p>";
 
-  // show instant feedback
-  el("entries").innerHTML = "<p class='muted'>Loading entries…</p>";
+      const log = await window.getMashLog(logId);
+      cachedEntries = await window.getMashLogEntries(logId);
 
-  const [log, entries] = await Promise.all([
-    window.getMashLog(logId),
-    window.getMashLogEntries(logId)
-  ]);
+      renderMeta(log);
+      renderEntries(cachedEntries);
+      resetEntryForm();
+    }
 
-  cachedEntries = entries;
-  renderMeta(log);
-  renderEntries(cachedEntries);
-  resetEntryForm();
-}
-    /* =========================
-       Add entry — OPTIMISTIC UI
-       ========================= */
+    el("logSelect").onchange = () => {
+      if (el("logSelect").value) {
+        loadLog(el("logSelect").value);
+      }
+    };
 
     el("btnAddEntry").onclick = async () => {
       if (!currentLogId) return;
 
       const entry = {
         timestamp: new Date().toISOString(),
-
         ph: el("inPH").value,
         sg: el("inSG").value,
         temp_f: el("inTemp").value,
         notes: el("inNotes").value,
-
         yn_type: el("addYN").value,
         yn_product: el("ynProduct").value,
         yn_amount: el("ynAmount").value,
         yn_unit: el("ynUnit").value,
-
         ph_action: el("phAction").value,
         ph_product: el("phProduct").value,
         ph_amount: el("phAmount").value,
-        ph_unit: el("phUnit").value,
-
-        _saving: true
+        ph_unit: el("phUnit").value
       };
 
-      // optimistic render
       cachedEntries.unshift(entry);
       renderEntries(cachedEntries);
       resetEntryForm();
 
-      try {
-        await window.addMashLogEntry(currentLogId, entry);
-        entry._saving = false;
-        renderEntries(cachedEntries);
-      } catch (err) {
-        console.error(err);
-        entry._saving = false;
-        entry._error = true;
-        renderEntries(cachedEntries);
-        alert("Entry failed to save. Check connection.");
-      }
+      await window.addMashLogEntry(currentLogId, entry);
     };
 
-    /* =========================
-       Init
-       ========================= */
     populateLogSelect();
   </script>
 
