--- a/bottling.html
+++ b/bottling.html
@@ -5,41 +5,47 @@
   <title>Compliance – Bottling Log</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Global styles -->
-  <link rel="stylesheet" href="/css/global.css" />
-  <link rel="stylesheet" href="/css/modules.css" />
+  <!-- Global header styles -->
+  <link rel="stylesheet" href="header.css" />
 </head>
 
 <body>
 
-  <!-- Global header -->
+  <!-- GLOBAL HEADER -->
   <div id="global-header"></div>
 
   <main class="page">
 
     <header class="page-header">
       <h1>Bottling Log</h1>
-      <div id="monthStatus" class="muted"></div>
+      <div id="monthStatus" class="muted">
+        Loading month…
+      </div>
     </header>
 
-    <!-- Add Bottling Entry -->
+    <!-- ADD BOTTLING ENTRY -->
     <section class="module">
       <h2>Add Bottling Entry</h2>
 
       <form id="bottlingForm">
 
         <div class="form-row">
-          <label>Date</label>
+          <label for="bottlingDate">Bottling Date</label>
           <input type="date" id="bottlingDate" required />
         </div>
 
         <div class="form-row">
-          <label>Product Name</label>
-          <input type="text" id="productName" placeholder="Peach Cobbler Moonshine" required />
+          <label for="productName">Product Name</label>
+          <input
+            type="text"
+            id="productName"
+            placeholder="Peach Cobbler Moonshine"
+            required
+          />
         </div>
 
         <div class="form-row">
-          <label>Product Type</label>
+          <label for="productType">Product Type</label>
           <select id="productType" required>
             <option value="">Select…</option>
             <option value="moonshine">Moonshine</option>
@@ -50,18 +56,22 @@
         </div>
 
         <div class="form-row">
-          <label>Proof</label>
+          <label for="proof">Proof</label>
           <input type="number" id="proof" step="0.1" required />
         </div>
 
         <div class="form-row">
           <label>Bottles</label>
+
           <div id="bottleRows"></div>
-          <button type="button" id="addBottleRow">+ Add Bottle Size</button>
+
+          <button type="button" id="addBottleRow">
+            + Add Bottle Size
+          </button>
         </div>
 
         <div class="form-row">
-          <label>Notes (optional)</label>
+          <label for="notes">Notes (optional)</label>
           <textarea id="notes" rows="2"></textarea>
         </div>
 
@@ -72,18 +82,31 @@
           </div>
         </div>
 
-        <button type="submit" class="primary">Save Bottling Entry</button>
+        <button type="submit" class="primary">
+          Save Bottling Entry
+        </button>
 
       </form>
     </section>
 
-    <!-- Existing Entries -->
+    <!-- EXISTING ENTRIES -->
     <section class="module">
       <h2>Entries</h2>
-      <div id="entriesList" class="list"></div>
+      <div id="entriesList">
+        Loading…
+      </div>
     </section>
 
   </main>
+
+  <!-- LOAD GLOBAL HEADER -->
+  <script>
+    fetch("header.html")
+      .then(r => r.text())
+      .then(html => {
+        document.getElementById("global-header").innerHTML = html;
+      });
+  </script>
 
   <script type="module" src="bottling.js"></script>
 </body>
