--- a/bottling.html
+++ b/bottling.html
@@ -7,6 +7,7 @@
 
   <!-- Global header styles -->
   <link rel="stylesheet" href="header.css" />
+  <link rel="stylesheet" href="compliance.css" />
 </head>
 
 <body>
